refactor(tests): replace index-based access with first() method for improved readability
- Updated assertions in multiple test classes to use the `getFirst()` method instead of index-based access for better clarity and consistency.
- This change applies to `DeckJpaAdapterTest`, `FlashcardJpaAdapterTest`, `NewsJpaAdapterTest`, `StatsJpaAdapterTest`, `UserJpaAdapterTest`, `StatsServiceTest`, `DeckQueryServiceTest`, and `HomePresenterTest`.